@startuml
!define YELLOW_BOX #FFFFB9
!define RED_LINE #A8504B

skinparam classAttributeIconSize 0
hide empty members

skinparam class {
    BackgroundColor YELLOW_BOX
    BorderColor RED_LINE
    ArrowColor RED_LINE
}

skinparam interface {
    BackgroundColor YELLOW_BOX
    BorderColor RED_LINE
}

hide circle

interface Message {
    + getContent(): String
}

interface MessageQueue {
    + enqueue(message: Message)
    + dequeue(): Message
    + addListener(listener: MessageListener)
    + removeListener(listener: MessageListener)
}

interface MessageListener {
    + onMessageChanged(queue: MessageQueue)
}

class RegisterListener {
    + register(queue: MessageQueue, number: int)
}

class SimpleMessageQueue {
    - messages: List<Message>
    - listeners: List<MessageListener>
    + enqueue(message: Message)
    + dequeue(): Message)
    + addListener(listener: MessageListener)
    + removeListener(listener: MessageListener)
    - notifyListeners()
}

class SimpleMessageCenter {
    - queues: List<MessageQueue>
    - {static} instance: SimpleMessageCenter
    - SimpleMessageCenter()
    + {static} getInstance(): SimpleMessageCenter
    + registerQueue(queue: MessageQueue)
    + unregisterQueue(queue: MessageQueue)
    + broadcast(message: Message)
}

interface MessageCenter {
    + registerQueue(queue: MessageQueue)
    + unregisterQueue(queue: MessageQueue)
    + broadcast(message: Message)
}

class MessageFactory {
    - MessageFactory()
    + {static} createMessage(content: String): Message
    + {static} createMessageQueue(): MessageQueue
    + {static} createMessageCenter(): MessageCenter
}

class SimpleMessage {
    - content: String
    + SimpleMessage(content: String)
    + getContent(): String
}

SimpleMessage ..|> Message
SimpleMessageQueue ..|> MessageQueue
SimpleMessageCenter ..|> MessageCenter

RegisterListener ..> MessageQueue
RegisterListener ..> Message

SimpleMessageCenter o-- MessageQueue
SimpleMessageCenter ..> Message

SimpleMessageQueue o-- Message
SimpleMessageQueue o-- MessageListener

MessageFactory ..> SimpleMessage
MessageFactory ..> SimpleMessageQueue
MessageFactory ..> SimpleMessageCenter
@enduml